--- a/task 18 of registration making page/index.html
+++ b/task 18 of registration making page/index.html
@@ -75,15 +75,27 @@
       }
       
       window.addEventListener("DOMContentLoaded", () => {
-        const localStorageObj = localStorage;
-        const localStoragekeys = Objects.keys(localStorageObj)
+        const date = axios.get("https://crudcrud.com/api/65e1c4fa6be04cbebaf5f7395dd10b0c/bookingappointnment/648416a3456f2b03e80bc86d")
+        .then((response) => {
+           // console.log(response);
 
-        for(var i=0; i<localStoragkeys.length; i++){
-            const key=localStoragekeys[i]
-            const userDetailsString = localStorageObj[key];
-            const userDetailsObj = JSON.parse(userDetailsString);
-            showNewUserOnScreen(userDetailsObj)
-        }
+            for(var i=0; i<response.data.length; i++) {
+                showNewUserOnScreen(response.data[i])
+            }
+         })
+         .catch=((error) => {
+            console.log(error)
+        })        
+        console.log(data);
+        // const localStorageObj = localStorage;
+        // const localStoragekeys = Objects.keys(localStorageObj)
+
+        // for(var i=0; i<localStoragkeys.length; i++){
+        //     const key=localStoragekeys[i]
+        //     const userDetailsString = localStorageObj[key];
+        //     const userDetailsObj = JSON.parse(userDetailsString);
+        //     showNewUserOnScreen(userDetailsObj)
+        // }
       })
       function showNewUserOnScreen(user){
         document.getElementById('email').value='';
